k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diary-backend
  namespace: diary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diary-backend
  template:
    metadata:
      labels:
        app: diary-backend
    spec:
      containers:
        - name: api
          image: diary-backend:3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: diary-backend
  namespace: diary
spec:
  selector:
    app: diary-backend
  ports:
    - port: 8000
      targetPort: 8000
